<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tvConfirmar_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmar Datos"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginLeft="90dp"

            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp">



        <TextView
            android:id="@+id/tvEl_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_Completo"
            android:textSize="18dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tvFecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento: "
            android:textSize="18dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvLa_fecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/fecha_nacimiento"
            android:textSize="18dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tel:"
            android:textSize="18dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvEl_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/telefono"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email: "
            android:textSize="18dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvEl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/email"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripcion: "
            android:textSize="18dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvLa_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_Contacto"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btEditar_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton_Editar_datos"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:onClick="editar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>