<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_nombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre completo"
            android:text="@string/nombre_Completo"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/picker_date_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"

        tools:layout_editor_absoluteX="10dp">

        <DatePicker
            android:id="@+id/mi_Datepicker"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginHorizontal="64dp"
            android:calendarViewShown="false"

            android:datePickerMode="spinner">

        </DatePicker>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_Date_Cancel"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="Cancel"

                >

            </Button>

            <Button
                android:id="@+id/boton_Date_OK"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="OK">

            </Button>

        </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Telefono"
                android:text="@string/telefono"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:text="@string/email"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        tools:layout_editor_absoluteX="10dp"
        android:scrollbars="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Descripcion Contacto"
            android:text="@string/descripcion_Contacto"
            android:inputType="textMultiLine"
            android:scrollbars="vertical">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Boton_Siguiente"
        android:onClick="confirmInput"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp" />



</LinearLayout>